Completed HTTP API Assignment ii
Accidentally did commits for project 1 - this fixes that.

--- a/client/client.html
+++ b/client/client.html
@@ -33,34 +33,30 @@
     };
 
     //Possible status codes
-  const handleResponse = (xhr) => {
-      const content = document.querySelector('#output');
-
-      switch(xhr.status) {
-        case 200: 
-          content.innerHTML = `<b>Success</b>`;
-          break;
-        case 201: 
-          content.innerHTML = '<b>Create</b>';
-          break;
-        case 204:
-          content.innerHTML = '<b>Updated (No Content)</b>';
-          break;
-        case 400: 
-          alert("All fields are required");
-          break;
-        case 404: 
-          alert("Resource not found");
-          break;
-        case 500:
-          alert("Internal Server Error");
-          break;
-        default: 
-          alert("Error: Code not implemented by client");  
-          break;
+    const handleResponse = (xhr) => {
+      const content = document.querySelector('#content');
+        
+        //switch statement updated with status codes
+        switch(xhr.status){
+            case 200:
+                content.innerHTML = '<b>Success</b>';
+                break;
+            case 201:
+                content.innerHTML = '<b>Create</b>';
+                break;
+            case 204:
+                content.innerHTML = '<b>Updated (No Content)</b>';
+                break;
+            case 404:
+                content.innerHTML = '<b>Resource Not Found</b>';
+                break;
+            default:
+                content.innerHTML = '<b>Resource Not Found</b>';
+                break;
       }
-      parseJSON(xhr, content);
+        parseJSON(xhr, content);
     };
+    
     //update request via sendXHR
     const sendXHR = (e, nameForm) => {
         const nameAction = nameForm.getAttribute('action');
